@@ -8,7 +8,7 @@
 <font color="#000000" size="6"><b>Release notes</b>
 </font></td></tr></table></td></tr></table><p>
 
-<!--  $Id: RELEASE.html,v 1.8 2007-09-11 21:46:35 debug Exp $  -->
+<!--  $Id: RELEASE.html,v 1.9 2007-11-04 06:32:48 debug Exp $  -->
 
 
 <h2>Release notes for GXemul 0.4.6.1</h2>
@@ -35,9 +35,16 @@ systems are <a href="doc/guestoses.html#netbsdpmaxinstall">NetBSD/pmax</a>
 and <a href="doc/guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
 
 
-<p><br>The changes between release 0.4.6 and 0.4.6.1 include:
+<p><br>The changes between release 0.4.6 and 0.4.6.1 are mostly
+focused on documentation updates, to reflect new releases of
+guest operating systems:
 
 <ul>
+
+  <li>OpenBSD 4.2 has been released. OpenBSD/landisk 4.2
+	works in GXemul.
+
+  <p>
 
   <li>NetBSD 4.0 has been released. The installation instructions
 	in GXemul's documentation have been updated to reflect this.
